# nwb-project-analytics

./: .gitignore  README.md  README.rst  license.txt  pyproject.toml  requirements-doc.txt  requirements.txt  setup.cfg  setup.py  test.txt
.github/workflows/: build_analytics_data.yml  build_the_docs.yml  test_workflow.yml
data/: cloc_stats.yaml  commit_stats.yaml  contributors.tsv  dandi_nwb_stats.tsv  git_paths.yaml  nwb_statistics.csv  release_timelines.yaml
docs/: Makefile
docs/source/: code_health.rst  conf.py  index.rst  software_health.rst
docs/source/_static/: analytics_page_logo.pptx
notebooks/: cloc_code_stats.ipynb  codecov_stats.ipynb  dandi_nwb_statistics_analysis.ipynb  dandi_with_pubs.ipynb  github_commit_stats.ipynb  github_issue_stats.ipynb  nwb_statistics.csv  release_timeline.ipynb
src/git_analytics/: cloc_code_stats.ipynb  issue_response_analysis.py  plot_release_timeline.ipynb
src/nwb_project_analytics/: __init__.py  _version.py  codecovstats.py  codestats.py  create_codestat_pages.py  dandistats.py  gitstats.py  renderstats.py
src/nwb_project_analytics/notebooks/: release_timeline.ipynb
src/nwb_project_analytics/notebooks/data/: git_paths.yaml
src/projectstats/: codecovstats.py  codestats.py  gitstats.py
src/projectstats/notebooks/: cloc_code_stats.ipynb  codecov_stats.ipynb  github_issue_stats.ipynb  release_timeline.ipynb
src/projectstats/notebooks/data/: cloc_stats.yaml  commit_stats.yaml  git_paths.yaml
