[versioneer]
VCS = git
versionfile_source = src/hdmf_zarr/_version.py
versionfile_build = hdmf_zarr/_version.py
style = pep440-pre
tag_prefix = *.*.*

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__,
  build/,
  dist/,
  src/projectstats/notebooks
per-file-ignores =
  setup.py:T001

[metadata]
description-file = README.rst
