[versioneer]
VCS = git
versionfile_source = src/nwb_project_analytics/_version.py
versionfile_build = nwb_project_analytics/_version.py
style = pep440-pre
tag_prefix = *.*.*

[flake8]
max-line-length = 120
max-complexity = 17
exclude =
  .git,
  .tox,
  __pycache__,
  build/,
  dist/,
  src/projectstats/notebooks
per-file-ignores =
  setup.py:T001

[metadata]
description_file = README.rst
